--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "postcss-flexbugs-fixes": "^5.0.2",
